# embp

./: .gitignore  pyproject.toml  readme.md
experiments/: case.py  main.py  main.sh  plot_en.R  readme.md
src/embp/: __init__.py  base.py  binary.py  binary_vem.py  continuous.py  embp.py  logger.py  simulate.py  utils.py
