[project]
name = "embp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rong Zhiwei", email = "18845728185@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[project.scripts]
embp = "embp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xarray>=2025.7.1",
]
